--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "express": "^4.17.1",
     "jsonschema": "^1.2.6",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
     "pg": "^8.3.0"
   },
   "devDependencies": {
